flashcards/src/style.css
h1 {
  font-size: 2rem;
}

.question-container {
  margin: 25px auto;
}

.card {
  border-radius: 5px;
  display: flex;
  align-items: center;
  font-family: sans-serif;
}

.card-body {
  padding: 0;
  padding-bottom: 40px;
}

.scene {
  display: inline-block;
  width: 400px;
  height: 260px;
  perspective: 600px;
}

.card {
  position: relative;
  width: 100%;
  height: 100%;
  cursor: pointer;
  transform-style: preserve-3d;
  transform-origin: center right;
  transition: transform 1s;
}

.is-flipped {
  transform: translateX(-100%) rotateY(-180deg);
}

.card__face {
  position: absolute;
  width: 100%;
  /* height: 100%; */
  line-height: 260px;
  color: white;
  text-align: center;
  font-weight: bold;
  font-size: 40px;
  backface-visibility: hidden;
}

.card__face--front {
  background: rgb(222, 173, 183);
}

.card__face--back {
  background: rgb(90, 151, 91);
  transform: rotateY(180deg);
}

